# valentine-scanner

./: .prettierignore  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: build-macos.yaml
ble-device/: ble-device.ino
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BeautyScale.tsx  BodyAnalysis.tsx  BodySchema.tsx  DiagnosisList.tsx  Header.tsx  PatientForm.tsx
src/data/: problems.ts
