[package]
name = "valentine-scanner"
version = "0.1.0"
description = "Desktop application to scan and detect any problem your Valentine may have"
authors = ["Logan Lucas <logan.lucas83@gmail.com>"]
edition = "2024"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "valentine_scanner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.49.0"
btleplug = "0.11.8"
uuid = "1.20.0"
futures-util = "0.3.31"
futures = "0.3.31"

